--- a/scss/components/_close.scss
+++ b/scss/components/_close.scss
@@ -10,7 +10,7 @@
 	  content: ' ';
 	  height: 2rem;
 	  width: 0.1rem;
-	  background-color: black;
+	  background-color: white;
 	}
 	&:before {
 	  transform: rotate(45deg);
