--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,6 +9,7 @@ $montoya-orange: #F5AF2D;
 $elbuen-orange: #EC8A32;
 $brown: #78431B;
 $off-black: #424242;
+$of-blue: #51A4DB;
 
 /*FONT*/
 $nunito: 'Nunito Sans', 'Helvetica', sans-serif;
