--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	opacity: 0;
-	background: white;
+	background: $red;
 	z-index: 4;
 
 	.mobile-links {
@@ -27,14 +27,14 @@
 				}
 
 				.m-link {
-					font-size: 3rem;
+					font-size: 10vw;
 					font-weight: 800;
-					color: black;
+					color: white;
 					text-decoration: none;
 					text-transform: none;
 					letter-spacing: 0;
 					@include sm-tablet {
-						font-size: 3.8rem;
+						font-size: 8vw;
 					}
 				}
 			}
