--- a/scss/layouts/_intro.scss
+++ b/scss/layouts/_intro.scss
@@ -30,7 +30,7 @@
 		}
 	}
 
-	h3,a {
+	a {
 		color: $gray;
 		text-transform: uppercase;
 		font-size: 1rem;
@@ -42,13 +42,15 @@
 	}
 
 	h1 {
-		text-transform: uppercase;
-		font-size: 5vw;
-		@include sm-desktop {
-			font-size: 4.8rem;
+		font-size: 10vw;
+		@include sm-tablet {
+			font-size: 9vw;
 		}
-		@include md-desktop {
-			font-size: 5.4rem;
+		@include sm-desktop {
+			font-size: 7rem;
+		}
+		@include mobile-landscape {
+			font-size: 6vw;
 		}
 	}
 
@@ -58,41 +60,28 @@
 		top: 45%;
 		white-space: nowrap;
 		@include sm-desktop {
-			@include shift(-50%, -40%);
-			top: 40%;
-			left: 50%;
+			@include shift(-35%, -45%);
+			top: 45%;
+			left: 35%;
 		}
 
-		h3 {
-			margin: 3rem 0;
-		}
-
-		.shrink-text {
-			overflow: hidden;
-			-webkit-animation: typing 1.4s steps(40, end);
-			        animation: typing 1.4s steps(40, end);
-			@include sm-tablet {
-
+		h1 {
+			#line-break {
+				@include mobile-landscape {
+					display: none;
+				}
+				@include sm-desktop {
+					display: none;
+				}
 			}
 		}
 
 		.fade-intro {
 			opacity: 0;
-			-webkit-animation: fade-in 1.4s;
-			        animation: fade-in 1.4s;
-			-webkit-animation-delay: 1.4s;
-			        animation-delay: 1.4s;
-			-webkit-animation-fill-mode: forwards;
-			        animation-fill-mode: forwards;
-		}
-
-		.delay-typing {
-			overflow: hidden;
-			width: 0;
-			-webkit-animation: typing 1.4s steps(40, end);
-			        animation: typing 1.4s steps(40, end);
-			-webkit-animation-delay: 2.8s;
-			        animation-delay: 2.8s;
+			-webkit-animation: fade-in 0.7s;
+			        animation: fade-in 0.7s;
+			-webkit-animation-delay: 0.3s;
+			        animation-delay: 0.3s;
 			-webkit-animation-fill-mode: forwards;
 			        animation-fill-mode: forwards;
 		}
@@ -103,16 +92,20 @@
 		position: absolute;
 		left: 50%;
 		bottom: 5rem;
+		cursor: pointer;
 		@include sm-tablet {
 			bottom: 8rem;
 		}
 
 		a {
 			text-decoration: none;
+			line-height: 1.8;
+			visibility: hidden;
 		}
 
 		.arrow {
 			margin-top: 0.2rem;
+			cursor: pointer;
 		}
 	}
 
@@ -122,27 +115,6 @@
 		bottom: 0;
 	}
 }
-
-@-webkit-keyframes typing {
-	from {
-		width: 0;
-
-	}
-	to {
-		width: 100%;
-	}
-}
-
-@keyframes typing {
-	from {
-		width: 0;
-
-	}
-	to {
-		width: 100%;
-	}
-}
-
 @-webkit-keyframes fade-in {
 	from {
 		opacity: 0;
